syntax = "proto3";

package proto;

import "gogo.proto";

// The db service definition.
service Dbsvc {
    // Push array of posts to database
    rpc Push (PushRequest) returns (PushReply) {}

    // Select array from database, each element from array belongs the interval
    rpc Select (SelectRequest) returns (SelectReply) {}
}

// The push request contains two parameters.
message PushRequest {
    repeated Post posts = 1 [(gogoproto.nullable) = false];
}

// The push response contains the result of the calculation.
message PushReply {
    string err = 1;
}

// The Select request contains two parameters.
message SelectRequest {
    SpatioTemporalInterval interval = 1 [(gogoproto.nullable) = false];;
}

// The Select response contains the result of the select request.
message SelectReply {
    repeated Post posts = 1 [(gogoproto.nullable) = false];;
    string err = 2;
}

message Post {
    string  ID = 1;
    string Shortcode = 2;
    string ImageURL = 3;
    bool IsVideo = 4;
    string Caption = 5;
    int64 CommentsCount = 6;
    int64 Timestamp = 7;
    int64 LikesCount = 8;
    bool IsAd = 9;
    string AuthorID = 10;
    string LocationID = 11;
    double Lat = 12;
    double Lon = 13;
}

message SpatioTemporalInterval {
    int64 MinTime = 1;
    int64 MaxTime = 2;
    double MinLat = 3;
    double MinLon = 4;
    double MaxLat = 5;
    double MaxLon = 6;
}